# nexus-api

./: .gitignore  Dockerfile  OFFLINE_DEPLOYMENT.md  README.md  pyproject.toml  pyrightconfig.json
config/: env.prod.toml  env.test.toml
deploy/asr_service/: Dockerfile  Dockerfile.robot-test  README.md  app.py  docker-compose.robot-prod.yml  docker-compose.robot-test.yml  docker-compose.yml  requirements.txt
deploy/nexus-api/: README.md  docker-compose.robot-prod.yml  docker-compose.robot-test.yml  robot-test.env.example
deploy/tts_service/: Dockerfile  README.md  app.py  docker-compose.robot-prod.yml  docker-compose.yml  requirements.txt
docs/: vla-debug-frontend-handoff.zh.md
scripts/: deploy_robot_prod.sh  deploy_robot_test.sh
scripts/model/: README.md  download_funasr_asr_model.py
src/: __init__.py  app.py  constants.py
src/config/: __init__.py  config_loader.py
src/core/: __init__.py  audio_worker.py  connection_handler.py  connection_registry.py  control_intent.py  enums.py  exceptions.py  http_server.py  turn_processor.py  turn_trace.py  websocket_server.py
src/db/: __init__.py  conversation_store.py  environment_store.py  equipment_store.py  machine_binding_store.py  orchestration_store.py  robot_skill_store.py  vla_debug_store.py
src/domain/: __init__.py  conversation.py  environment.py  machine_binding.py  orchestration.py  robot_skill.py  session.py
src/protocol/: __init__.py  edge_cloud.py
src/providers/: __init__.py  asr.py  llm.py  module_initializer.py  tts.py  tts_session.py  vad.py
src/routers/: __init__.py  common_router.py  (+9 more)
(+12 files in other folders)
